# aisoc-season-2

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: assignments.yml
Applied AI/week_1/day_3_first_llm/: readme.md
Applied AI/week_3/day_4_rag_deepdive/: main.py
Applied AI/week_3/day_6_chat_engine/: app.py  assignment.md  requirements.txt
Applied AI/week_4/day_2_build_a-frontend_for_your_llm/: INSTRUCTOR_TROUBLESHOOTING_GUIDE.md  SETUP_INSTRUCTIONS.md  app.py  app_chainlit_demo.py  assignment.md  chainlit_client.py  requirements.txt
Applied AI/week_4/day_2_frontend/: README.md  TROUBLESHOOTING_GUIDE.md  app.py  app_chainlit_demo.py  chainlit_client.py  requirements.txt
Applied AI/week_4/day_4_system_design/: README.md
Applied AI/week_4/system_design/: README.md
Applied AI/week_5/day_1_llm_agent/: pyproject.toml
Applied AI/week_5/day_1_llm_agent/src/application/: datamodels.py  main.py  routes.py
Applied AI/week_5/day_1_llm_agent/src/config/: appconfig.py  settings.py
Applied AI/week_5/day_1_llm_agent/src/infrastructure/database/: mongo.py
Applied AI/week_5/day_1_llm_agent/src/models/: gemini.py
Applied AI/week_5/day_1_llm_agent/src/services/: agent.py
Applied AI/week_5/day_1_llm_agent/src/services/tools/: apis.py  constants.py
Production AI/Designing Production AI Systems/: main.py  readme.md
Production AI/ssn2_Designing Production AI Systems/: pyproject.toml
Production AI/ssn2_Designing Production AI Systems/src/application/: chatdatamodel.py  main.py
Production AI/ssn2_Designing Production AI Systems/src/config/: settings.py
(+97 files in other folders)
