[project]
name = "grpc-server"
version = "0.1.0"
description = ""
authors = [
    {name = "ayo@aisoc.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "protobuf (>=5.29.3,<6.0.0)",
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
